force-app/main/default/objects/SR_Admin_Data__c/SR_Admin_Data__c.object-meta.xml
<CustomObject>
    <description>This object maintains the application parameters and definition for SR</description>
    <label>SR Admin Data</label>
    <nameField>
        <label>Admin Code</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>