force-app/main/default/objects/SR_Admin_Data__c/fields/Admin_Code_Filtering__c.field-meta.xml
<CustomField>
    <fullName>Admin_Code_Filtering__c</fullName>
    <label>Admin Code Filtering</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>