force-app/main/default/objects/SR_Admin_Data__c/fields/Admin_Code_Master__c.field-meta.xml
<CustomField>
    <fullName>Admin_Code_Master__c</fullName>
    <defaultValue>(&quot;KEYN&quot;)</defaultValue>
    <description>‘KEYN’ for the parameter definition or ‘parem_sequence’ for the parameter details</description>
    <label>Admin Code Master</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>