force-app/main/default/objects/SR_Admin_Data__c/fields/Delete_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Delete_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Logical Delete Indicator(Y/N)</description>
    <label>Delete Indicator</label>
    <type>Checkbox</type>
</CustomField>