force-app/main/default/objects/SR_Admin_Data__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <description>Line of Business</description>
    <inlineHelpText>Line of Business</inlineHelpText>
    <label>LOB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>